--- a/src/index.css
+++ b/src/index.css
@@ -54,6 +54,10 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
-}
+}  
+
+
+
+/* checking status update */
 
 
